Save language selection

--- a/App.config
+++ b/App.config
@@ -66,6 +66,9 @@
             <setting name="MergeCharacters" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="CultureName" serializeAs="String">
+                <value />
+            </setting>
         </BG3LocalizationMerger.Properties.Settings>
     </userSettings>
 </configuration>
