--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -56,5 +56,8 @@
     <Setting Name="MergeCharacters" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="CultureName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
