Fix settings not upgrading properly

--- a/App.config
+++ b/App.config
@@ -69,6 +69,9 @@
             <setting name="CultureName" serializeAs="String">
                 <value />
             </setting>
+            <setting name="SettingsVersion" serializeAs="String">
+                <value />
+            </setting>
         </BG3LocalizationMerger.Properties.Settings>
     </userSettings>
 </configuration>
