--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -59,5 +59,8 @@
     <Setting Name="CultureName" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="SettingsVersion" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
