--- a/BG3LocalizationMerger.csproj
+++ b/BG3LocalizationMerger.csproj
@@ -8,7 +8,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PlatformTarget>x64</PlatformTarget>
     <NeutralLanguage>en</NeutralLanguage>
-    <Version>$(VersionPrefix)1.0.1</Version>
+    <Version>$(VersionPrefix)1.0.2</Version>
     <SignAssembly>False</SignAssembly>
   </PropertyGroup>
 
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <Reference Include="LSLib">
-      <HintPath>D:\Games\BG3\LSLib.dll</HintPath>
+      <HintPath>D:\Games\BG3\LSLib\LSLib.dll</HintPath>
     </Reference>
   </ItemGroup>
 
